# LOL-hextech-connector

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: lcu.rs  main.rs  models.rs  ui.rs  utils.rs
src/backend/: ban and pick.py  champ_select.rs  flow.rs  mod.rs  pick_or_ban.ts
